--- a/themes/beth/assets/css/header.css
+++ b/themes/beth/assets/css/header.css
@@ -1,21 +1,18 @@
 .site-header h1 {
-  margin: 0;
-  color: var(--brown);
-  font-size: var(--step-4);
   letter-spacing: 0.02em;
 }
 
 .site-header a {
   text-decoration: underline;
   text-decoration-color: transparent;
-  text-decoration-thickness: 6px;
-  text-underline-offset: 6px;
+  text-decoration-thickness: var(--space-4xs-3xs);
+  text-underline-offset: var(--space-4xs-3xs);
   transition: 0.5s cubic-bezier(0.645, 0.045, 0.355, 1);
 
   &:hover {
     text-decoration: underline;
     text-decoration-color: var(--links);
-    text-decoration-thickness: 6px;
-    text-underline-offset: 6px;
+    text-decoration-thickness: var(--space-4xs-3xs);
+    text-underline-offset: var(--space-4xs-3xs);
   }
 }
