--- a/themes/beth/assets/css/nav.css
+++ b/themes/beth/assets/css/nav.css
@@ -1,31 +1,23 @@
 .site-nav {
   overflow: hidden;
-  border: 2px solid var(--brown-dark);
-  border-radius: var(--space-3xs);
+  border-radius: var(--border-r-s);
   background-color: var(--brown-dark);
-  box-shadow: 0 0 2px 0.2px oklch(from oklch(30% 0.036 69.71) calc(l + 10%) c h);
+  box-shadow: var(--box-shadow-navbar);
+  border: 2px solid var(--brown-dark);
   text-align: center;
 }
 
 .links {
   flex: 1 1 auto;
+  font-size: var(--step-0);
   padding: var(--space-2xs);
-  outline: 2px solid var(--brown-dark);
   background-color: var(--brown);
   color: var(--brown-light);
-  font-size: var(--step-0);
   font-weight: 500;
-  transition: 0.3s cubic-bezier(0.645, 0.045, 0.355, 1);
+  outline: 2px solid var(--brown-dark);
 
   &:hover {
     background-color: var(--brown-light);
-    box-shadow:
-      inset 0 0 2px 1px
-      oklch(from oklch(78% 0.036 69.71) calc(l - 12%) c h),
-      inset 0 0 4px 1px
-      oklch(from oklch(78% 0.036 69.71) calc(l - 8%) c h),
-      inset 0 0 8px 1px
-      oklch(from oklch(78% 0.036 69.71) calc(l - 4%) c h);
-    color: var(--brown-dark);
+    color: var(--brown);
   }
 }
