--- a/themes/beth/assets/css/typography.css
+++ b/themes/beth/assets/css/typography.css
@@ -1,5 +1,4 @@
 h1 {
-  margin-bottom: var(--space-s);
   font-size: var(--step-3);
 }
 
